[package]
name = "letter-combinations-of-a-phone-number"
version = "0.1.0"
authors = ["sugyan <sugi1982@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "letter_combinations_of_a_phone_number"
path = "lib.rs"
