[package]
name = "remove-nth-node-from-end-of-list"
version = "0.1.0"
authors = ["sugyan <sugi1982@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../../utils" }

[lib]
name = "remove_nth_node_from_end_of_list"
path = "lib.rs"
