[package]
name = "search-in-rotated-sorted-array"
version = "0.1.0"
authors = ["sugyan <sugi1982@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "search_in_rotated_sorted_array"
path = "lib.rs"
