[package]
name = "find-first-and-last-position-of-element-in-sorted-array"
version = "0.1.0"
authors = ["sugyan <sugi1982@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "find-first-and-last-position-of-element-in-sorted-array"
path = "main.rs"
