[package]
name = "find-first-and-last-position-of-element-in-sorted-array"
version = "0.1.0"
authors = ["sugyan <sugi1982@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "find_first_and_last_position_of_element_in_sorted_array"
path = "lib.rs"
