[package]
name = "unique-binary-search-trees-ii"
version = "0.1.0"
authors = ["sugyan <sugi1982@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../../utils" }

[lib]
name = "unique_binary_search_trees_ii"
path = "lib.rs"
