[package]
name = "binary-tree-zigzag-level-order-traversal"
version = "0.1.0"
authors = ["sugyan <sugi1982@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../../utils" }

[lib]
name = "binary_tree_zigzag_level_order_traversal"
path = "lib.rs"
