[package]
name = "construct-binary-tree-from-preorder-and-inorder-traversal"
version = "0.1.0"
authors = ["sugyan <sugi1982@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../../utils" }

[lib]
name = "construct_binary_tree_from_preorder_and_inorder_traversal"
path = "lib.rs"
