[package]
name = "convert-sorted-list-to-binary-search-tree"
version = "0.1.0"
authors = ["sugyan <sugi1982@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../../utils" }

[lib]
name = "convert_sorted_list_to_binary_search_tree"
path = "lib.rs"
