[package]
name = "flatten-binary-tree-to-linked-list"
version = "0.1.0"
authors = ["sugyan <sugi1982@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../../utils" }

[lib]
name = "flatten_binary_tree_to_linked_list"
path = "lib.rs"
