[package]
name = "best-time-to-buy-and-sell-stock"
version = "0.1.0"
authors = ["sugyan <sugi1982@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "best_time_to_buy_and_sell_stock"
path = "lib.rs"
