[package]
name = "fraction-to-recurring-decimal"
version = "0.1.0"
authors = ["sugyan <sugi1982@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "fraction_to_recurring_decimal"
path = "lib.rs"
