[package]
name = "bitwise-and-of-numbers-range"
version = "0.1.0"
authors = ["sugyan <sugi1982@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "bitwise_and_of_numbers_range"
path = "lib.rs"
