[package]
name = "add-and-search-word-data-structure-design"
version = "0.1.0"
authors = ["sugyan <sugi1982@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "add_and_search_word_data_structure_design"
path = "lib.rs"
