[package]
name = "kth-largest-element-in-an-array"
version = "0.1.0"
authors = ["sugyan <sugi1982@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "kth_largest_element_in_an_array"
path = "lib.rs"
