[package]
name = "kth-smallest-element-in-a-bst"
version = "0.1.0"
authors = ["sugyan <sugi1982@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../../utils" }

[lib]
name = "kth_smallest_element_in_a_bst"
path = "lib.rs"
