[package]
name = "range-sum-query-2d-immutable"
version = "0.1.0"
authors = ["sugyan <sugi1982@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "range_sum_query_2d_immutable"
path = "lib.rs"
