[package]
name = "insert-delete-getrandom-o1"
version = "0.1.0"
authors = ["sugyan <sugi1982@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6"

[lib]
name = "insert_delete_getrandom_o1"
path = "lib.rs"
